--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,8 +1,7 @@
+node_modules
+dist
+.tmp
+.sass-cache
+app/bower_components
 .DS_Store
-app/test/
-build/
-node_modules/
-.sass-cache/
-bower_components/
-components/
-app/components/
+parse
