--- a/web/bower.json
+++ b/web/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "jquery-mobile": "~1.4.3",
-    "svg.js": "~1.0.0-rc.9"
+    "svg.js": "~1.0.0-rc.9",
+    "svg.draggable.js": "~0.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
