--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name=".bookListActivity"
+            android:name=".BookListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +22,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".bookDetailActivity"
+            android:name=".BookDetailActivity"
             android:label="@string/title_book_detail"
-            android:parentActivityName=".bookListActivity" >
+            android:parentActivityName=".BookListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bookListActivity" />
