リスト画面に新規登録ボタンを配置。新規登録画面を作成（遷移できる）

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bookListActivity" />
         </activity>
+        <activity
+            android:name=".BookEditActivity"
+            android:label="@string/title_book_detail"
+            android:parentActivityName=".BookListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".bookListActivity" />
+        </activity>
     </application>
 
 </manifest>
