--- a/web/bower.json
+++ b/web/bower.json
@@ -12,7 +12,8 @@
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
     "svg.js": "~1.0.0-rc.9",
-    "font-awesome": "~4.1.0"
+    "font-awesome": "~4.1.0",
+    "jquery-ui": "~1.11.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
