--- a/web/bower.json
+++ b/web/bower.json
@@ -1,22 +1,23 @@
 {
-  "name": "public",
+  "name": "temp",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.15",
-    "json3": "~3.2.6",
-    "es5-shim": "~2.1.0",
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.0.3",
-    "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
-    "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15",
-    "svg.js": "~1.0.0-rc.9",
-    "font-awesome": "~4.1.0",
-    "jquery-ui": "~1.11.1"
+    "angular": "1.2.16",
+    "json3": "~3.3.1",
+    "es5-shim": "~3.1.0",
+    "bootstrap": "~3.2.0",
+    "angular-resource": "1.2.16",
+    "angular-cookies": "1.2.16",
+    "angular-sanitize": "1.2.16",
+    "angular-animate": "1.2.16",
+    "angular-touch": "1.2.16",
+    "angular-route": "1.2.16",
+    "jquery-ui": "~1.11.1",
+    "svg.js": "~1.0.1"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15"
-  }
+    "angular-mocks": "1.2.16",
+    "angular-scenario": "1.2.16"
+  },
+  "appPath": "app"
 }
