--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:19.+'
     compile 'com.etsy.android.grid:library:1.0.5'
+    compile 'com.github.gabrielemariotti.cards:library:1.9.0'
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
 }
