--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.github.gabrielemariotti.cards:library:1.9.0'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'com.melnykov:floatingactionbutton:1.0.3'
 }
