--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,10 +22,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:support-v4:19.+'
+    compile 'com.android.support:support-v4:20.+'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.github.gabrielemariotti.cards:library:1.9.0'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.melnykov:floatingactionbutton:1.0.3'
+    compile 'com.android.support:support-annotations:20.0.0'
 }
