android: 検索結果画面作成。表示はできた。データはダミー。

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,6 +37,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bookListActivity" />
         </activity>
+        <activity
+            android:name=".BookSearchResultListActivity"
+            android:label="@string/title_book_detail"
+            android:parentActivityName=".BookDetailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".BookDetailActivity" />
+        </activity>
     </application>
 
 </manifest>
