--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,10 +23,25 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:20.+'
+
+    // grid
     compile 'com.etsy.android.grid:library:1.0.5'
+
+    //card
     compile 'com.github.gabrielemariotti.cards:library:1.9.0'
+
+    // REST
     compile 'com.squareup.retrofit:retrofit:1.6.1'
+
+    // image loader
     compile 'com.squareup.picasso:picasso:2.3.4'
+
+    // floating action button
     compile 'com.melnykov:floatingactionbutton:1.0.3'
     compile 'com.android.support:support-annotations:20.0.0'
+
+    //lListViewAnimations
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0'
+    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0'
+
 }
