--- a/web/bower.json
+++ b/web/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "1.2.16",
     "angular-route": "1.2.16",
     "jquery-ui": "~1.11.1",
-    "svg.js": "~1.0.1"
+    "svg.js": "~1.0.1",
+    "svg-pan-zoom": "~2.3.9"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
