--- a/web/bower.json
+++ b/web/bower.json
@@ -14,7 +14,8 @@
     "angular-route": "1.2.16",
     "jquery-ui": "~1.11.1",
     "svg.js": "~1.0.1",
-    "svg-pan-zoom": "~2.3.9"
+    "svg-pan-zoom": "~2.3.9",
+    "hammerjs": "~2.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
