--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0'
     compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0'
 
+    // zoomable imageview
+    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+
+
 }
