--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,8 +7,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.+'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // method call logging
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.1.0'
+
     }
 }
 
