--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="jp.caliconography.one_liners" >
+    package="jp.caliconography.one_liners">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,11 +10,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".BookListActivity"
-            android:label="@string/app_name" >
+            android:name=".activities.BookListActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,25 +21,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".BookDetailActivity"
+            android:name=".activities.BookDetailActivity"
             android:label="@string/title_book_detail"
-            android:parentActivityName=".BookListActivity">
-        <meta-data
+            android:parentActivityName=".activities.BookListActivity">
+            <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bookListActivity" />
         </activity>
         <activity
-            android:name=".PhotoDetailActivity"
+            android:name=".activities.PhotoDetailActivity"
             android:label="@string/title_photo_detail"
-            android:parentActivityName=".BookDetailActivity">
+            android:parentActivityName=".activities.BookDetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".BookDetailActivity" />
         </activity>
         <activity
-            android:name=".BookSearchResultListActivity"
+            android:name=".activities.BookSearchResultListActivity"
             android:label="@string/title_book_detail"
-            android:parentActivityName=".BookDetailActivity">
+            android:parentActivityName=".activities.BookDetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".BookDetailActivity" />
