--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     // butter knife(view injection)
     compile 'com.jakewharton:butterknife:5.1.2'
+
+    // otto(Event bus)
+    compile 'com.squareup:otto:1.3.5'
 }
