android: BookDetailに写真表示実装中（Parse保存実装開始）

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
 
     // otto(Event bus)
     compile 'com.squareup:otto:1.3.5'
+
+    // bolts(tasks, capture...)
+    compile 'com.parse.bolts:bolts-android:1.1.3'
 }
