--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity
+        android:theme="@style/AppTheme"
+        android:name="jp.caliconography.one_liners.App">
+    <activity
             android:name=".activities.BookListActivity"
             android:label="@string/app_name">
         <intent-filter>
