android: Detailで削除実装（確認メッセージ）

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
 
     // bolts(tasks, capture...)
     compile 'com.parse.bolts:bolts-android:1.1.3'
+
+    // styled dialogfragment
+    compile 'eu.inmite.android.lib:android-styled-dialogs:1.2.0'
 }
