--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:21.+'
 
+    // toolbar etc.
+    compile "com.android.support:appcompat-v7:21.0.+"
+
     // grid
 //    compile 'com.etsy.android.grid:library:1.0.5'
 
