android: ユニットテストの実装開始。

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'LICENSE.txt'
+    }
+    sourceSets {
+        main {
+            manifest.srcFile 'src/androidTest/AndroidManifest.xml'
+        }
+    }
 }
 
 dependencies {
@@ -80,4 +88,8 @@ dependencies {
 
     // styled dialogfragment
     compile 'eu.inmite.android.lib:android-styled-dialogs:1.2.0'
+
+    // test
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
 }
